디버깅 완료

--- a/src/main/resources/templates/comp/joinForm.mustache
+++ b/src/main/resources/templates/comp/joinForm.mustache
@@ -14,7 +14,7 @@
 		<form action="/comp/join" method="post" enctype="multipart/form-data" onsubmit="return valid()">
 
 			<div class="d-flex form-group mt-2 mb-2">
-				<input type="hidden" name="role" value=2/>
+				<input type="hidden" name="role" value="2"/>
 				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email"
 				       onchange="useremailChange()"/>
 				<button type="button" class="badge bg-secondary ms-2" onclick="check()">중복체크</button>
