--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -931,7 +931,7 @@
 
 		function applyPage() {
 			messageCheckOut();
-			location.href = "/user/applyList";
+			location.href = "/user/apply/list";
 		}
 	</script>
 
