--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -13,7 +13,7 @@
 			<div class="d-flex form-group mt-2 mb-2">
 
 				<div>
-					<input type="hidden" name="role" value=1/>
+					<input type="hidden" name="role" value="1"/>
 				</div>
 				<div>
 					<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email"
