--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -16,7 +16,7 @@
 		<form action="/login" method="post" onsubmit="changeLoginLinksAndButton()">
 			<div class="d-flex form-group mt-2 mb-2">
 				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email"
-				       value="@nate.com">
+				       value="ssar@nate.com">
 			</div>
 
 			<div class="mb-2">
@@ -27,7 +27,7 @@
 			<div class="mt-4"></div>
 
 			<div class="form-check mb-3">
-				<input class="form-check-input" type="checkbox" id="">
+				<input class="form-check-input" type="checkbox" id="" >
 				<label class="form-check-label" for="flexCheckChecked">아이디를 기억 하시겠습니까?</label>
 			</div>
 
