--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -461,7 +461,7 @@
 					<input
 						id="applyPage"
 						type="button"
-						class="btn btn-sm btn-danger p-0 ps-1 pe-1 failButton"
+						class="btn btn-sm btn-primary p-0 ps-1 pe-1 failButton"
 						value="보러가기"
 						style="
               display: flex;
