이력서 수정 디버그

--- a/src/main/resources/templates/comp/posting/detail.mustache
+++ b/src/main/resources/templates/comp/posting/detail.mustache
@@ -150,14 +150,14 @@
 		{{^sessionComp.compname
 		}}<a
 			href="/user/apply/form/{{ postingId }}"
-			class="w-50 mb-3 btn btn-info"
+			class="w-50 mb-3 btn btn-info text-white"
 		>지원하기</a
 		>
 			<button
 				type="button"
 				action="/user/bookmark/form/save"
 				method="post"
-				class="w-50 ms-2 btn btn-warning mb-3 bookmark-button"
+				class="w-50 ms-2 btn btn-warning mb-3 bookmark-button text-white"
 				data-posting-id="{{ posting.id }}"
 			>
 				북마크하기
