--- a/src/main/resources/templates/user/resume/updateForm.mustache
+++ b/src/main/resources/templates/user/resume/updateForm.mustache
@@ -38,19 +38,19 @@
 					<div class="col-8 p-2">
 						<div class="input-group mb-3">
 							<span class="input-group-text"><span class="ms-2 me-4">이름</span></span>
-							<input type="text" class="form-control" name="username" value="{{ resume.user.username }}"/>
+							<input type="text" class="form-control" name="username" value="{{ resume.user.username }}" readonly/>
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text">전화번호</span>
-							<input type="tel" class="form-control" name="tel" value="{{ resume.user.tel }}"/>
+							<input type="tel" class="form-control" name="tel" value="{{ resume.user.tel }}"readonly/>
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text"><span class="ms-2 me-4">주소</span></span>
-							<input type="text" class="form-control" name="address" value="{{ resume.user.address }}"/>
+							<input type="text" class="form-control" name="address" value="{{ resume.user.address }}"readonly/>
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text">생년월일</span>
-							<input type="date" class="form-control" name="birth" value="{{ resume.user.birth }}"/>
+							<input type="date" class="form-control" name="birth" value="{{ resume.user.birth }}" readonly/>
 						</div>
 					</div>
 				</div>
