개별공고에서 합격눌러도 메세지

--- a/src/main/resources/templates/user/bookmark/form.mustache
+++ b/src/main/resources/templates/user/bookmark/form.mustache
@@ -115,7 +115,7 @@
 					.then(function (response) {
 						if (response.ok) {
 							// 삭제 성공
-							alert("공고가 삭제되었습니다.");
+							alert("북마크가 삭제되었습니다.");
 
 							// 삭제된 아이템을 화면에서 제거
 							var itemToRemove = e.target.closest(".d-flex.border.border-info.m-3.p-2");
