--- a/src/main/resources/templates/comp/resume/list.mustache
+++ b/src/main/resources/templates/comp/resume/list.mustache
@@ -85,10 +85,12 @@
 
 						<form action="/comp/posting/apply/{{id}}/pass" method="post">
 							<input class="btn btn-sm btn-success p-0 ps-1 pe-1 me-1 passButton" type="submit"
+							onclick="changeState('{{ resume.user.username }}')"
 							       value="합격">
 						</form>
 						<form action="/comp/posting/apply/{{id}}/fail" method="post">
-							<input class="btn btn-sm btn-danger p-0 ps-1 pe-1 failButton" type="submit" value="불합격">
+							<input class="btn btn-sm btn-danger p-0 ps-1 pe-1 failButton" type="submit"
+							onclick="changeState('{{ resume.user.username }}')" value="불합격">
 						</form>
 					</td>
 				</tr>
@@ -200,6 +202,24 @@
 		element.classList.add("table-success");
 	});
 
+
+
+	async function changeState(username) {
+		let requestBody = {
+			username: username,
+		};
+
+		let response = await fetch(`/api/user/changeState`, {
+			method: "post",
+			headers: {
+				"Content-Type": "application/json",
+			},
+			body: JSON.stringify(requestBody),
+		});
+
+		let result = await response.json();
+	}
+	
 </script>
 
 
