images 경로 재설정

--- a/src/main/resources/templates/comp/detailOnly.mustache
+++ b/src/main/resources/templates/comp/detailOnly.mustache
@@ -124,7 +124,7 @@
 
 			<div class="d-flex">
 				<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:180px; height:280px;">
-					<img src="../../../images/{{#sessionComp.photo}}{{sessionComp.photo}}{{/sessionComp.photo}}"
+					<img src="/images/{{#sessionComp.photo}}{{sessionComp.photo}}{{/sessionComp.photo}}"
 					     class=""/>
 				</div>
 
