--- a/src/main/resources/templates/comp/resume/detail.mustache
+++ b/src/main/resources/templates/comp/resume/detail.mustache
@@ -10,7 +10,7 @@
 			style="width: 167px; height: 165px"
 		>
 			<img
-				src="../../../images/{{ resume.user.photo }}"
+				src="/images/{{ resume.user.photo }}"
 				class="img-fluid rounded-circle"
 			/>
 		</div>
