--- a/src/main/resources/templates/master/search.mustache
+++ b/src/main/resources/templates/master/search.mustache
@@ -42,11 +42,11 @@
 							<h4 class="text-center fw-bold">{{compname}}</h4>
 							{{#photo}}
 							<a href="/comp/company/{{id}}" class="text-black text-decoration-none"><img
-								src="../../../images/{{photo}}" class="img-fluid d-block m-auto"
+								src="/images/{{photo}}" class="img-fluid d-block m-auto"
 								style="height: 120px;">{{/photo}}
 							{{^photo}}
 							<a href="/comp/company/{{id}}" class="text-black text-decoration-none"><img
-								src="../../../images/no_logo.png" class="img-fluid d-block m-auto"
+								src="/images/no_logo.png" class="img-fluid d-block m-auto"
 								style="height: 120px;">
 							{{/photo}}
 
@@ -90,10 +90,10 @@
 						<div class="m-2 mb-0 ps-2 pe-2 pt-1" style="background-color: #66e3dd;">
 							<h4 class="text-center fw-bold mt-1">{{user.compname}}</h4>
 							{{#user.photo}}<a href="/comp/posting/{{id}}" class="text-black text-decoration-none"><img
-								src="../../../images/{{user.photo}}" class="img-fluid d-block m-auto"
+								src="/images/{{user.photo}}" class="img-fluid d-block m-auto"
 								style="height: 120px;">{{/user.photo}}
 							{{^user.photo}}<a href="/comp/posting/{{id}}" class="text-black text-decoration-none"><img
-								src="../../../images/no_logo.png" class="img-fluid d-block m-auto"
+								src="/images/no_logo.png" class="img-fluid d-block m-auto"
 								style="height: 120px;">{{/user.photo}}
 							<h5 class="mt-1 fw-bold">{{title}}</h5>
 							<div class="mb-1 fst-italic">{{position}}</div>
@@ -138,11 +138,11 @@
 							</span><h4 class="text-center fw-bold mt-1">{{user.username}}</h4>
 							{{#user.photo}}
 							<a href="/resume/{{id}}" class="text-black text-decoration-none"><img
-								src="../../../images/{{user.photo}}" class="img-fluid d-block m-auto"
+								src="/images/{{user.photo}}" class="img-fluid d-block m-auto"
 								style="height: 120px;">{{/user.photo}}
 							{{^user.photo}}
 							<a href="/resume/{{id}}" class="text-black text-decoration-none"><img
-								src="../../../images/no_logo.png" class="img-fluid d-block m-auto"
+								src="/images/no_logo.png" class="img-fluid d-block m-auto"
 								style="height: 120px;">
 							{{/user.photo}}
 							<h5 class="mt-1 fw-bold">{{title}}</h5>
