--- a/src/main/resources/templates/user/bookmark/form.mustache
+++ b/src/main/resources/templates/user/bookmark/form.mustache
@@ -43,7 +43,7 @@
 								href="/comp/posting/{{ id }}"
 								class="text-black text-decoration-none"
 							><img
-								src="../../../images/no_logo.png"
+								src="/images/no_logo.png"
 								class="img-fluid d-block m-auto"
 								style="height: 120px"
 							/>{{/user.photo}}
