--- a/src/main/resources/templates/user/resume/detailForm.mustache
+++ b/src/main/resources/templates/user/resume/detailForm.mustache
@@ -5,7 +5,7 @@
 		<h1 class="text-center mt-2">이력서 상세보기</h1>
 		<div class="d-flex">
 			<div class="m-2 col-4 d-flex flex-column align-items-center">
-				<img src="../../../../../images/{{resume.user.photo}}" class="circle_avatar"
+				<img src="/images/{{resume.user.photo}}" class="circle_avatar"
 				     style="width: 150px; height: 150px"/>
 			</div>
 			<div class="col-8 p-2">
