--- a/src/main/resources/templates/comp/detail.mustache
+++ b/src/main/resources/templates/comp/detail.mustache
@@ -9,7 +9,7 @@
 
 		<div class="d-flex">
 			<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:180px; height:280px;">
-				<img src="../../../images/{{#company.photo}}{{company.photo}}{{/company.photo}}" class=""/>
+				<img src="/images/{{#company.photo}}{{company.photo}}{{/company.photo}}" class=""/>
 			</div>
 
 			<div class="col-8 ps-3">
