--- a/src/main/resources/templates/comp/posting/detail.mustache
+++ b/src/main/resources/templates/comp/posting/detail.mustache
@@ -10,7 +10,7 @@
 			class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto"
 			style="width: 176px; height: 280px"
 		>
-			<img src="../../../images/{{ posting.user.photo }}" class=""/>
+			<img src="/images/{{ posting.user.photo }}" class=""/>
 		</div>
 
 		<div class="col-8 ps-3">
