--- a/src/main/resources/templates/comp/posting/detailOnly.mustache
+++ b/src/main/resources/templates/comp/posting/detailOnly.mustache
@@ -123,7 +123,7 @@
 
 		<div class="d-flex">
 			<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:178px; height:280px;">
-				<img src="../../../images/{{posting.user.photo}}" class=""/>
+				<img src="/images/{{posting.user.photo}}" class=""/>
 			</div>
 
 			<div class="col-8 ps-2">
