--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -366,7 +366,7 @@
 						href="/comp/posting/{{ id }}"
 						class="text-black text-decoration-none"
 					><img
-						src="../../../images/{{ user.photo }}"
+						src="/images/{{ user.photo }}"
 						class="img-fluid d-block m-auto"
 						style="height: 120px"
 					/>{{/user.photo}}
@@ -379,7 +379,7 @@
 						href="/comp/posting/{{ id }}"
 						class="text-black text-decoration-none"
 					><img
-						src="../../../images/no_logo.png"
+						src="/images/no_logo.png"
 						class="img-fluid d-block m-auto"
 						style="height: 120px"
 					/>{{/user.photo}}
