--- a/src/main/resources/templates/user/apply/form.mustache
+++ b/src/main/resources/templates/user/apply/form.mustache
@@ -8,7 +8,7 @@
 
 		<div class="d-flex m-2">
 			<div class="col-5">
-				<a href="#"><img src="../../../images/{{ posting.user.photo }}" class="img-fluid"
+				<a href="#"><img src="/images/{{ posting.user.photo }}" class="img-fluid"
 				                 style="width:300px; height:200px;"/></a>
 			</div>
 
