--- a/src/main/resources/templates/user/resume/updateForm.mustache
+++ b/src/main/resources/templates/user/resume/updateForm.mustache
@@ -26,7 +26,7 @@
 			<form action="/resume/{{ resume.id }}/update" method="post" enctype="multipart/form-data">
 				<div class="d-flex">
 					<div class="m-2 col-4 d-flex flex-column align-items-center">
-						<img id="preview" src="../../../../../images/{{resume.user.photo}}" class="circle_avatar"
+						<img id="preview" src="/images/{{resume.user.photo}}" class="circle_avatar"
 						     style="width:150px; height:150px;"/>
 						<div class="input-group mb-3 mt-3">
 							<input type="file" class="form-control" placeholder="Enter pto" name="pto"
